prep for copilot

--- a/pilotReport.Rmd
+++ b/pilotReport.Rmd
@@ -8,11 +8,17 @@ output:
     toc: yes
 ---
 
-#### Article ID: [5-4-2015_PS]
-#### Pilot 1: [Benjamin deMayo]
-#### Co-pilot: [Katherine Hermann]
-#### Start date: [11/5/17]
-#### End date: [11/7/17]   
+```{r}
+articleID <- "9-2-2015_PS" # insert the article ID code here e.g., "10-3-2015_PS"
+reportType <- 'pilot'
+pilotNames <- "Benjamin deMayo, Katherine Hermann" # insert the pilot's name here e.g., "Tom Hardwicke". If there are multiple pilots enter both names in a character string e.g., "Tom Hardwicke, Bob Dylan"
+copilotNames <- "Tom Hardwicke" # insert the co-pilot's name here e.g., "Michael Frank". If there are multiple co-pilots enter both names in a character string e.g., "Tom Hardwicke, Bob Dylan"
+pilotTTC <- 240 # insert the pilot's estimated time to complete (in minutes, fine to approximate) e.g., 120
+copilotTTC <- NA # insert the co- pilot's estimated time to complete (in minutes, fine to approximate) e.g., 120
+pilotStartDate <- as.Date("11/05/17", format = "%m/%d/%y") # insert the pilot's start date in US format e.g., as.Date("01/25/18", format = "%m/%d/%y")
+copilotStartDate <- as.Date("", format = "%m/%d/%y") # insert the co-pilot's start date in US format e.g., as.Date("01/25/18", format = "%m/%d/%y")
+completionDate <- as.Date("", format = "%m/%d/%y") # copilot insert the date of final report completion (after any necessary rounds of author assistance) in US format e.g., as.Date("01/25/18", format = "%m/%d/%y")
+```
 
 -------
 
@@ -22,7 +28,7 @@ This is an analytic reproduction of Experiment 6 in Shah, Shafir & Mullainathan 
 ------
 
 #### Target outcomes: 
-"One participant was excluded because of a computer
+> "One participant was excluded because of a computer
 malfunction during the game. Time-rich participants
 rated the loss as more expensive when they thought
 about a small account (M = 8.31, 95% CI = [7.78, 8.84])
@@ -52,6 +58,11 @@ library(afex) #anova functions
 library(langcog) #95 percent confidence intervals
 ```
 
+```{r}
+# Prepare report object. This will be updated automatically by the reproCheck function each time values are compared.
+reportObject <- data.frame(dummyRow = TRUE, reportedValue = NA, obtainedValue = NA, valueType = NA, percentageError = NA, comparisonOutcome = NA, eyeballCheck = NA)
+```
+
 ## Step 2: Load data
 
 ```{r}
@@ -59,16 +70,12 @@ data <- read_excel("data/study 6-accessible-feud.xlsx")
 ```
 
 ## Step 3: Tidy data
+
 The data are already tidy as provided by the authors.
-
-```{r}
-
-```
 
 ## Step 4: Run analysis
 
 ### Pre-processing
-
 
 ```{r}
 #select the relevant data columns
@@ -117,25 +124,23 @@ summary <- d1 %>%
   group_by(Cond) %>%
   multi_boot_standard(col = "expense")
 
-head(summary)
+reportObject <- reproCheck(reportedValue = "8.83", obtainedValue = 8.947368, valueType = 'mean')#Comparing the means in the poor_large condition
 
-compareValues(8.83, 8.947368)#Comparing the means in the poor_large condition
+reportObject <- reproCheck(reportedValue = "7.97", obtainedValue = 8.046035, valueType = 'ci')#lower 95% Confidence Interval Limit in the poor_large condition
 
-compareValues(7.97, 8.046035)#lower 95% Confidence Interval Limit in the poor_large condition
-
-compareValues(9.69, 9.848702)#upper 95% Confidence Interval Limit in the poor_large condition
+reportObject <- reproCheck(reportedValue = "9.69", obtainedValue = 9.848702, valueType = 'ci')#upper 95% Confidence Interval Limit in the poor_large condition
     
-compareValues(5.42, 5.50)#lower 95% Confidence Interval Limit in the rich_large condition
+reportObject <- reproCheck(reportedValue = "5.42", obtainedValue = 5.50, valueType = 'ci')#lower 95% Confidence Interval Limit in the rich_large condition
 
-compareValues(7.58, 7.50)#upper 95% Confidence Interval Limit in the rich_large condition
+reportObject <- reproCheck(reportedValue = "7.58", obtainedValue = 7.50, valueType = 'ci')#upper 95% Confidence Interval Limit in the rich_large condition
 
-compareValues(7.14, 7.00)#lower 95% Confidence Interval Limit in the poor_small condition
+reportObject <- reproCheck(reportedValue = "7.14", obtainedValue = 7.00, valueType = 'ci')#lower 95% Confidence Interval Limit in the poor_small condition
 
-compareValues(9.52, 9.43)#upper 95% Confidence Interval Limit in the poor_small condition
+reportObject <- reproCheck(reportedValue = "9.52", obtainedValue = 9.43, valueType = 'ci')#upper 95% Confidence Interval Limit in the poor_small condition
 
-compareValues(7.78, 7.88)#lower 95% Confidence Interval Limit in the rich_small condition
+reportObject <- reproCheck(reportedValue = "7.78", obtainedValue = 7.88, valueType = 'ci')#lower 95% Confidence Interval Limit in the rich_small condition
 
-compareValues(8.84, 8.81)#upper 95% Confidence Interval Limit in the rich_small condition
+reportObject <- reproCheck(reportedValue = "8.84", obtainedValue = 8.81, valueType = 'ci')#upper 95% Confidence Interval Limit in the rich_small condition
 
 ```
 
@@ -151,28 +156,69 @@ t.test(rich_small$expense, rich_large$expense) #Testing: "Time-rich participants
 aov_BudgetAccount <- aov_ez(id = "Subject", dv = "expense", data = d1, between = c("budget", "account"), anova_table = list(es = "pes"))
 summary(aov_BudgetAccount)
 
-compareValues(69, 70) #degrees of freedom
-compareValues(5.76, 5.16) #F-statistic
-compareValues(.07, .076079) #partial effect size
+reportObject <- reproCheck(reportedValue = "69", obtainedValue = 70, valueType = 'df') #degrees of freedom
+reportObject <- reproCheck(reportedValue = "5.76", obtainedValue = 5.16, valueType = 'F') #F-statistic
+reportObject <- reproCheck(reportedValue = ".07", obtainedValue = .076079, valueType = 'pes') #partial effect size
 
 ```
 
 ## Step 5: Conclusion
 
-[Include the carpsReport function below]
-
-```{r}
-carpsReport(Report_Type = "pilot", 
-            Article_ID = "5-4-2015_PS", 
-            Insufficient_Information_Errors = 1, 
-            Decision_Errors = 0, 
-            Major_Numerical_Errors = 2, 
-            Time_to_Complete = 240, 
-            Author_Assistance = FALSE)
-```
-
 This reproducibility check was a failure, as it contained two Major Numerical Errors, an Insufficient Information Error and numerous Minor Numerical Errors. The insufficient information error refers to the fact that the text indicates that one participant in Experiment 6 was excluded, but does not give enough information to remove this person from the analyses. The differences in means for the poor_large condition, as well as differences in numerical values obtained in the 2x2 ANOVA, are likely due to the exclusion of this participant which is mentioned in the paper, but not apparent from the raw data file. Differences in confidence intervals for all other conditions are unexplained.
 
+
+```{r}
+Author_Assistance = FALSE # was author assistance provided? (if so, enter TRUE)
+
+Insufficient_Information_Errors <- 1 # how many discrete insufficient information issues did you encounter?
+
+# Assess the causal locus (discrete reproducibility issues) of any reproducibility errors. Note that there doesn't necessarily have to be a one-to-one correspondance between discrete reproducibility issues and reproducibility errors. For example, it could be that the original article neglects to mention that a Greenhouse-Geisser correct was applied to ANOVA outcomes. This might result in multiple reproducibility errors, but there is a single causal locus (discrete reproducibility issue).
+
+locus_typo <- NA # how many discrete issues did you encounter that related to typographical errors?
+locus_specification <- NA # how many discrete issues did you encounter that related to incomplete, incorrect, or unclear specification of the original analyses?
+locus_analysis <- NA # how many discrete issues did you encounter that related to errors in the authors' original analyses?
+locus_data <- NA # how many discrete issues did you encounter that related to errors in the data files shared by the authors?
+locus_unidentified <- NA # how many discrete issues were there for which you could not identify the cause
+
+Affects_Conclusion <- NA # Do any reproducibility issues encounter appear to affect the conclusions made in the original article? This is a subjective judgement, but you should taking into account multiple factors, such as the presence/absence of decision errors, the number of target outcomes that could not be reproduced, the type of outcomes that could or could not be reproduced, the difference in magnitude of effect sizes, and the predictions of the specific hypothesis under scrutiny.
+```
+
+```{r}
+reportObject <- reportObject %>%
+  filter(dummyRow == FALSE) %>% # remove the dummy row
+  select(-dummyRow) %>% # remove dummy row designation
+  mutate(articleID = articleID) %>% # add the articleID 
+  select(articleID, everything()) # make articleID first column
+
+# decide on final outcome
+if(any(reportObject$comparisonOutcome != "MATCH") | Insufficient_Information_Errors > 0){
+  finalOutcome <- "Failure without author assistance"
+  if(Author_Assistance == T){
+    finalOutcome <- "Failure despite author assistance"
+  }
+}else{
+  finalOutcome <- "Success without author assistance"
+  if(Author_Assistance == T){
+    finalOutcome <- "Success with author assistance"
+  }
+}
+
+# collate report extra details
+reportExtras <- data.frame(articleID, pilotNames, copilotNames, pilotTTC, copilotTTC, pilotStartDate, copilotStartDate, completionDate, Author_Assistance, finalOutcome, Insufficient_Information_Errors, locus_typo, locus_specification, locus_analysis, locus_data, locus_unidentified)
+
+# save report objects
+if(reportType == "pilot"){
+  write_csv(reportObject, "pilotReportDetailed.csv")
+  write_csv(reportExtras, "pilotReportExtras.csv")
+}
+
+if(reportType == "final"){
+  write_csv(reportObject, "finalReportDetailed.csv")
+  write_csv(reportExtras, "finalReportExtras.csv")
+}
+```
+
+# Session information
 
 ```{r session_info, include=TRUE, echo=TRUE, results='markup'}
 devtools::session_info()
